[gd_scene load_steps=8 format=3 uid="uid://7tx8y7bexiry"]

[ext_resource type="Script" path="res://scenes/player/weapons/sword.gd" id="1_41o6r"]
[ext_resource type="AudioStream" uid="uid://r4bp64uibej5" path="res://scenes/player/assets/blade_1.wav" id="3_8otfm"]
[ext_resource type="AudioStream" uid="uid://mjlrf7owlvcl" path="res://scenes/player/assets/blade_2.wav" id="4_7vioj"]
[ext_resource type="AudioStream" uid="uid://c3tjix00n3eov" path="res://scenes/player/assets/blade_3.wav" id="5_bks16"]
[ext_resource type="AudioStream" uid="uid://ds7lpn11nb2x1" path="res://scenes/player/assets/sword_sheathed.mp3" id="6_5qr3b"]

[sub_resource type="CircleShape2D" id="CircleShape2D_1ovo8"]
radius = 27.3602

[sub_resource type="Curve" id="Curve_d6y5x"]
max_value = 3.0
_data = [Vector2(0, 1.47686), 0.0, 0.0, 0, 0, Vector2(0.118388, 0.310993), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[node name="sword" type="Node2D"]
scale = Vector2(0.707213, 0.707213)
script = ExtResource("1_41o6r")

[node name="blade_1" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_8otfm")
volume_db = -5.0
pitch_scale = 0.75

[node name="blade_2" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_7vioj")
volume_db = -5.0
pitch_scale = 0.78

[node name="blade_3" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_bks16")
volume_db = -5.0
pitch_scale = 0.74

[node name="sword_sheathed" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_5qr3b")

[node name="hitbox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 102

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox"]
position = Vector2(36.764, 0)
scale = Vector2(1.66667, 1.94593)
shape = SubResource("CircleShape2D_1ovo8")

[node name="CPUParticles2D" type="CPUParticles2D" parent="hitbox"]
position = Vector2(39.592, 1.41399)
rotation = 1.5708
skew = 1.01055
emitting = false
amount = 100
lifetime = 0.5
one_shot = true
explosiveness = 1.0
emission_shape = 1
emission_sphere_radius = 29.44
gravity = Vector2(0, -120)
radial_accel_min = -60.58
radial_accel_max = 67.31
scale_amount_min = 0.0
scale_amount_max = 3.0
scale_amount_curve = SubResource("Curve_d6y5x")

[node name="cooldown" type="Timer" parent="."]
one_shot = true
